# life-os

./: .gitignore  CLAUDE.md  COLLABORATING.md  JANICE.md  README.md  justfile  pyproject.toml  pyrightconfig.json
.githooks/: commit-msg  pre-commit
.github/workflows/: pr-size.yml  readme-review.yml
ctx/: auto.md  chat.md  tg.md
ctx/fragments/: autonomy.md  boot.md  close.md  code.md  context.md  epistemics.md  mandate.md  protocols.md  rsi.md  tasks.md  voice.md  watch.md  workspace.md
docs/: arch.md  daemon.md  dashboard.md  hooks.md  initiatives.md  sessions.md  setup.md  trails.md  wake.md
life/: accounts.py  achievements.py  add.py  backup.py  cli.py  config.py  contacts.py  daemon.py  dash.py  dashboard.py  dates.py  db.py  doctor.py  email.py  feedback.py  fm.py  habit.py  habits.py  health.py  hook.py  improvements.py  init.py  install.py  interventions.py  item.py  items.py  loop.py  messages.py  messaging.py  metrics.py  momentum.py  mood.py  note.py  nudge.py  patterns.py  recall.py  ref.py  render.py  resolve.py  rm.py  (+13 more)
life/comms/: accounts.py  accounts_cli.py  agent.py  claude.py  daemon.py  db.py  drafts.py  email_cli.py  events.py  main.py  messages_cli.py  models.py  peers.py  senders.py  services.py  signal_cli.py
life/comms/adapters/email/: gmail.py
life/comms/adapters/messaging/: signal.py
life/comms/email/: gmail.py  outlook.py  resend.py
life/comms/messages/: signal.py  telegram.py  telegram_sync.py
life/core/: config.py  errors.py  models.py  types.py
life/ctx/: __init__.py  assemble.py  sections.py
life/ctx/seed/: .gitignore  CLAUDE.md  LIFE.md
life/ctx/seed/steward/: human.md  memory.md
life/daemon/: __init__.py  __main__.py  claude.py  cli.py  commands.py  inbound.py  morning.py  nightly.py  reap.py  run.py  session.py  shared.py  spawn.py
life/domain/: feedback.py  habit.py  resolve.py  tag.py
life/hooks/: __init__.py  git.py  session.py  signals.py  skills.py
life/lib/: ansi.py  clock.py  converters.py  dates.py  env.py  errors.py  format.py  fuzzy.py  ids.py  inbox.py  install.py  parsing.py  render.py  resolve.py  store.py  tags.py  tail.py
life/lib/providers/: __init__.py  claude.py  glm.py
life/migrations/: 001_merge_patterns_into_observations.sql  002_soft_deletes.sql  003_steward_uuids.sql  004_achievement_uuids.sql  005_task_notes.sql  006_habit_cadence.sql  007_contacts.sql  008_contacts_deleted_at.sql  009_rename_tables.sql  010_rename_sender_stats.sql  011_promote_uuids.sql  012_habits_deleted_at.sql  013_nudge_log.sql  014_session_tracking.sql  015_habit_scheduled_time.sql  016_session_source_followups.sql  017_spawns.sql  018_messages_photo_path.sql  019_rename_photo_to_image_path.sql  020_spawn_session_tracking.sql  042_achievements.sql  043_learnings.sql  044_telegram_messages.sql  045_unified_messages.sql
life/steward/: __init__.py  _stream.py  auto.py  boot.py  chat.py  close.py  ctx.py  daemon.py  dash.py  improve.py  inbox.py  initiatives.py  inspect.py  install.py  launchd.py  log.py  main.py  notes.py  patterns.py  ping.py  recall.py  sleep.py  trails.py  wake.py
life/store/: __init__.py  connection.py  migrations.py  query.py  sqlite.py
life/store/migrations/: 021_events_foundation.sql  022_unified_sessions.sql  023_session_handover.sql  024_session_welfare.sql  026_session_chat_id.sql  027_drop_spawns.sql  028_rename_session_columns.sql  030_is_urgent.sql  031_improvements_promoted.sql  032_pings.sql
life/task/: __init__.py  cli.py  domain.py  item.py  minimal.py  render.py  rows.py  search.py  sections.py
lifeos/core/: config.py  errors.py  models.py
lifeos/core/comms/: accounts.py  claude.py  config.py  contacts.py  drafts.py  events.py  models.py  patterns.py  peers.py  senders.py  services.py
lifeos/core/comms/email/: gmail.py  outlook.py
lifeos/core/comms/messages/: signal.py  telegram.py  telegram_sync.py
lifeos/core/ctx/: cli.py  fragments.py  sections.py
lifeos/core/lib/: converters.py  dates.py  format.py  frontmatter.py  fuzzy.py  parsing.py  repos.py  resolve.py  store.py
lifeos/core/lib/providers/: __init__.py  claude.py
lifeos/core/store/: connection.py  migrations.py  query.py  schema.sql  sqlite.py
lifeos/core/store/migrations/: 025_notes.sql  (+4 more)
lifeos/steward/: __init__.py  _stream.py  auto.py  chat.py  improve.py  inbox.py  inspect.py  log.py  main.py  patterns.py  ping.py  sleep.py  trails.py  wake.py
lifeos/steward/daemon/: __main__.py  claude.py  cli.py  commands.py  inbound.py  morning.py  reap.py  run.py  session.py  shared.py  spawn.py
scripts/: com.life.daemon.plist  life-statusline  log-turn.py  momentum_explore.py  steward-statusline
scripts/hooks/: pre-commit
tests/: conftest.py  test_architecture.py  test_contracts.py  test_invariants.py  test_style.py
tests/integration/: test_backup.py  test_dates.py  test_help.py  test_rm_and_index_keys.py  test_status_feedback_loops.py  test_steward_rsi.py
tests/unit/: test_architecture.py  test_contacts.py  test_daemon_claude.py  test_dashboard.py  test_db.py  test_habit.py  test_loop.py  test_momentum.py  test_note.py  test_nudge.py  test_skill_injection.py  test_skills_cli.py  test_store.py  test_tags.py  test_tail.py  test_task.py  test_weekly_habit.py
tests/unit/lib/: test_ansi.py  test_backup.py  test_converters.py  test_env.py  test_format.py  test_providers.py  test_resolve.py
