[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-cli"
version = "0.1.0"
description = "Life accountability CLI"
authors = [{name = "Tyson Chan", email = "tyson.chan@proton.me"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "fncli",
    "keyring>=25.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
    "msal>=1.0.0",
    "requests>=2.31.0",
    "qrcode>=8.2",
    "python-dateutil>=2.9.0.post0",
    "atail",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pytest>=8.4.1",
    "pyright>=1.1.408",
]

[project.scripts]
life = "life.cli:main"
steward = "life.steward.boot:main"

[tool.hatch.build.targets.wheel]
packages = ["life"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["vendor/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "RUF",    # ruff-specific
    "TID",    # tidy imports
    "PIE",    # misc lints
    "FLY",    # flynt (f-strings)
    "FURB",   # refurb (modern python)
    "PLC",    # pylint conventions
]
ignore = [
    "SIM108",
    "SIM115",
    "SIM117",
    "E501",
    "COM812",
    "S104",
    "D100", "D101", "D102", "D103", "D104", "D107",
    "D202", "D209", "D212", "D213", "D401", "D413", "D417",
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN401",
    "FBT001", "FBT002", "FBT003",
    "EM101", "EM102",
    "TRY003", "TRY300", "TRY301", "TRY400", "TRY401",
    "G004", "G201",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "ARG001", "ARG004",
    "C901",
    "BLE001",
    "S603",
    "S607",
    "S108",
    "B008",
    "PLC0415",
    "TID252",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S607", "S606"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.uv.sources]
fncli = { path = "../../space/fncli", editable = true }
atail = { path = "../../infra/trace", editable = true }
