[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "life-cli"
version = "0.1.0"
description = "Life accountability CLI"
authors = [{name = "Tyson Chan", email = "tyson.chan@proton.me"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "fncli",
    "keyring>=25.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
    "msal>=1.0.0",
    "requests>=2.31.0",
    "qrcode>=8.2",
    "python-dateutil>=2.9.0.post0",
    "atrace",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "pytest>=8.4.1",
    "pyright>=1.1.408",
]

[project.scripts]
life = "life.cli:main"
steward = "life.steward.main:main"
comms = "life.comms.main:main"

[tool.hatch.build.targets.wheel]
packages = ["life"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["vendor/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "RUF",    # ruff-specific
    "TID",    # tidy imports
    "PIE",    # misc lints
    "FLY",    # flynt (f-strings)
    "FURB",   # refurb (modern python)
    "PLC",    # pylint conventions
]
ignore = [
    "SIM108",   # ternary — readability preference
    "SIM115",   # context manager for open() — not always cleaner
    "SIM117",   # nested with — readability preference
    "S104",     # binding 0.0.0.0 — preventive
    "S603",     # subprocess call — CLI shells out by design
    "S607",     # partial path — same
    "S108",     # /tmp usage — acceptable
    "B008",     # mutable default arg — fncli pattern
    "PLC0415",  # import not at top — lazy imports for fncli commands
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S607", "S606"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.uv.sources]
fncli = { git = "https://github.com/iteebz/fncli.git" }
atrace = { git = "https://github.com/iteebz/trace.git" }
